test/configCases/errors/self-reexport/b.js

import { something, other } from "./b";

export {
	something as other,
	other as something
}
